@@ -21,25 +21,27 @@ import java.util.Map;
 import java.util.Set;
 
 /**
- * Eliminates boxing/unboxing method calls inserted by javac.
+ * 装箱/拆箱消除重写器,负责去除 javac 编译器自动插入的包装类型装箱和拆箱方法调用.
  *
- * <p>Patterns:
+ * <p>可识别的模式:
  * <pre>
- *   Integer.valueOf(5)  →  5
- *   x.intValue()        →  x
- *   new Integer(5)      →  5  (Java &lt; 9)
- *   Boolean.valueOf(b)  →  b
+ *   Integer.valueOf(5)  →  5          (装箱 → 原始值)
+ *   x.intValue()        →  x          (拆箱 → 原始变量)
+ *   new Integer(5)      →  5          (Java 9 之前的装箱方式)
+ *   Boolean.valueOf(b)  →  b          (布尔装箱消除)
  * </pre>
  *
- * <p>Inspired by CFR's {@code BoxingProcessor}.
+ * <p>设计参考 CFR 的 {@code BoxingProcessor}.
  */
 public class BoxingRewriter implements RewriteRule {
 
+    /** 包装类型内部名称集合 */
     private static final Set<String> WRAPPER_TYPES = Set.of(
             "java/lang/Integer", "java/lang/Long", "java/lang/Short",
             "java/lang/Byte", "java/lang/Float", "java/lang/Double",
             "java/lang/Boolean", "java/lang/Character");
 
+    /** 拆箱方法名到包装类型的映射 */
     private static final Map<String, String> UNBOX_METHODS = new HashMap<>();
 
     static {
@@ -65,6 +67,7 @@ public class BoxingRewriter implements RewriteRule {
         return new CompilationUnit(unit.packageName(), unit.imports(), types);
     }
 
+    /** 递归重写类型声明中的每个方法体 */
     private TypeDeclaration rewriteType(TypeDeclaration td) {
         List<AstNode> members = new ArrayList<>();
         for (AstNode m : td.children()) {
@@ -80,9 +83,10 @@ public class BoxingRewriter implements RewriteRule {
                 td.superName(), td.interfaceNames(), td.typeParameters(), members);
     }
 
+    /** 递归重写语句中的装箱/拆箱调用 */
     private Statement rewriteStatement(Statement s) {
         if (s == null) {
-            return null; // abstract/native methods have no body
+            return null; // 抽象方法或 native 方法无方法体
         }
         return switch (s) {
             case BlockStatement bs -> new BlockStatement(bs.statements().stream()
@@ -99,18 +103,23 @@ public class BoxingRewriter implements RewriteRule {
         };
     }
 
-    /** Eliminate boxing/unboxing calls in an expression tree. */
+    /**
+     * 消除表达式树中的装箱和拆箱方法调用.
+     *
+     * <p>拆箱:{@code x.{type}Value()} → {@code x}
+     * <p>装箱:{@code Integer.valueOf(x)} → {@code x}
+     */
     private Expression rewriteExpr(Expression e) {
         if (e instanceof InvocationExpr inv) {
-            // Unboxing: x.{type}Value() → x
+            // 拆箱:x.{type}Value() → x
             if (isUnboxCall(inv)) {
                 return inv.target();
             }
-            // Boxing: Integer.valueOf(x) → x
+            // 装箱:Integer.valueOf(x) → x
             if (isBoxCall(inv) && !inv.arguments().isEmpty()) {
                 return rewriteExpr(inv.arguments().getFirst());
             }
-            // Rewrite args recursively
+            // 递归重写参数
             List<Expression> newArgs = new ArrayList<>();
             for (Expression arg : inv.arguments()) {
                 newArgs.add(rewriteExpr(arg));
@@ -119,24 +128,24 @@ public class BoxingRewriter implements RewriteRule {
                     inv.target() != null ? rewriteExpr(inv.target()) : null,
                     inv.methodName(), newArgs, inv.returnType());
         }
-        // TODO: recursively rewrite children of other expression types
+        // TODO: 递归重写其他表达式类型的子节点
         return e;
     }
 
+    /** 检查是否为拆箱方法调用(如 x.intValue()),目标为包装类型且无参数 */
     private boolean isUnboxCall(InvocationExpr inv) {
         String name = inv.methodName();
         if (name == null || !UNBOX_METHODS.containsKey(name)) {
             return false;
         }
-        // Check target is a VarExpr (likely the wrapper type)
         return inv.target() != null && inv.arguments().isEmpty();
     }
 
+    /** 检查是否为装箱方法调用(如 Integer.valueOf(x)),静态调用且恰好一个参数 */
     private boolean isBoxCall(InvocationExpr inv) {
         if (!"valueOf".equals(inv.methodName())) {
             return false;
         }
-        // target should be null (static call) and exactly 1 arg
         return inv.target() == null && inv.arguments().size() == 1;
     }
 }
